--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,8 @@ name:         POE-Component-Client-HTTP
 version_from: lib/POE/Component/Client/HTTP.pm
 installdirs:  site
 license:      perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
     POE:                               0.3202
     HTTP::Request:                     1.30
