Use the correct distribution name.

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name              = POE-Component-Resolver
+name              = POE-Component-Client-HTTP
 version           = 0.900
 author            = Rocco Caputo <rcaputo@cpan.org>
 license           = Perl_5
