Replace Socket6 with Socket::GetAddrInfo.

--- a/dist.ini
+++ b/dist.ini
@@ -14,7 +14,7 @@ Net::HTTP::Methods                = 5.812
 POE                               = 1.294
 POE::Component::Client::Keepalive = 0.261
 POE::Filter::Line                 = 1.294
-Socket6                           = 0.23
+Socket::GetAddrInfo               = 0.19
 Test::More                        = 0.96
 Test::POE::Server::TCP            = 1.14
 URI                               = 1.37
