Allow response events to be objects.
Reflex::POE::Event objects are intended to be used as POE events.  For
it to work, components like this one must treat events as opaque data.

--- a/dist.ini
+++ b/dist.ini
@@ -34,7 +34,10 @@ git_remote = gh
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 [ReportVersions]
+
 [ChangelogFromGit]
+tag_regexp = v(\d+[_.]\d+)
+
 [@Classic]
 
 ; Not ready, unfortunately.
