--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,4 @@
 name              = POE-Component-Client-HTTP
-version           = 0.944
 author            = Rocco Caputo <rcaputo@cpan.org>
 license           = Perl_5
 copyright_holder  = Rocco Caputo
@@ -18,27 +17,33 @@ Test::More                        = 0.96
 Test::POE::Server::TCP            = 1.14
 URI                               = 1.37
 
+[MetaResources]
+bugtracker        = http://rt.cpan.org/Public/Dist/Display.html?Name=POE-Component-Client-HTTP
+repository        = http://github.com/rcaputo/poe-component-client-http
+
 [Repository]
 git_remote = gh
-
-;[BumpVersionFromGit]
-;first_version = 0.001
-;version_regexp  = ^v(.+)$
-
-;; Working directory must be clean.
-;[Git::Check]
-;[Git::Tag]
-;tag_format  = v%v
-;tag_message = Release v%v.
 
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 [ReportVersions]
 
+; Require everything to be checked in.
+[Git::Check]
+allow_dirty = Dist-Zilla-Plugin-ChangelogFromGit-*.*/*
+
+; Calculate the release version.
+[Git::NextVersion]
+first_version  = 0.945
+version_regexp = ^v(\d+\.\d+)$
+
+; Generate the changelog.
 [ChangelogFromGit]
 tag_regexp = v(\d+[_.]\d+)
 
-[@Classic]
+; Tag the repository after release.
+[Git::Tag]
+tag_format  = v%v
+tag_message = Release %v.
 
-; Not ready, unfortunately.
-;[CreditsFromGit]
+[@Classic]
