Author dependency added for Pod::Coverage::TrustPod

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-before_install: eval $(curl https://travis-perl.github.io/init) --auto
+before_install:
+ - eval $(curl https://travis-perl.github.io/init) --auto
+ - cpanm -n Pod::Coverage::TrustPod
 dist: trusty
 language: perl
 perl:
