--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,8 @@ URI                               = 1.37
 bugtracker        = http://rt.cpan.org/Public/Dist/Display.html?Name=POE-Component-Client-HTTP
 repository        = http://github.com/rcaputo/poe-component-client-http
 
+[MetaJSON]
+
 [Repository]
 git_remote = gh
 
